# cambridge-map

./: .gitignore  TODO.md  config.yaml  pyproject.toml
.github/workflows/: build.yml
gpx/: 20260104_northstowe.gpx  20260403_shepreth_eversdens.gpx
src/cambridge_map/: __main__.py  ascii_grid.py  build.py  combine.py  config.py  coords.py  parse_gpx.py
static/: map.js  style.css
templates/: index.html
