[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambridge-map"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6",
    "pyproj>=3.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]
